Tracking Number realted bugs are now fixed

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -23,8 +23,9 @@
           <p>
             <b>Delivery Address:</b> <%= o.address %>
           </p>
-          <%# o.consignments.select { |oc| @t = oc.tracking_no }  %>
-            <p><b>Tracking No:</b> <%= o.consignments.last.tracking_no == "" || nil ? "Provided Upon Dispatch" : o.consignments.last.tracking_no %></p>
+          <% o.consignments.select { |oc| @t = oc.tracking_no }  %>
+            <p><b>Tracking No:</b> <%= @t == "" || @t.nil? ? "Provided Upon Dispatch" : @t %></p>
+            <!-- o.consignments.last.tracking_no -->
         </div>
         <div class="message-status">
           <% if o.status == "Ordered" %>
