--- a/app/views/admin/orders/_show_partial.html.erb
+++ b/app/views/admin/orders/_show_partial.html.erb
@@ -55,8 +55,10 @@
 <% end %>
   <tr>
     <td><%= f.submit "Dispatch Order" %></td>
-    <td colspan="6" style="text-align:right;"><b>Your Order Total:</b></td>
-    <td colspan="7"><b> <%=number_to_currency @order.calculate_total %></b></td>
+    <td>Add Notes: </td>
+    <td><%= f.text_area :admin_notes %> </td>
+    <td colspan="5" style="text-align:right;"><b>Your Order Total:</b></td>
+    <td colspan="6"><b> <%=number_to_currency @order.calculate_total %></b></td>
   </tr>
 </table>
 <% end %>
