--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,9 +42,9 @@
       <%= link_to new_user_session_path do %>
       <%= image_tag "https://png.icons8.com/ios/55/156DB1/circled-L.png" %>
       <% end %><p style="color:#156DB1">ogin</p> &ensp;
-      <%= link_to new_user_registration_path do %>
-      <%= image_tag "https://png.icons8.com/ios/55/156DB1/circled-S.png" %>
-      <% end %><p style="color:#156DB1">ignUp</p>
+      <%#= link_to new_user_registration_path do %>
+      <%#= image_tag "https://png.icons8.com/ios/55/156DB1/circled-S.png" %>
+      <!-- <%# end %><p style="color:#156DB1">ignUp</p> -->
     <% end %>
   </div>
 
