--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,3 +1,28 @@
 .pad-top {
   padding-top: 50px;
 }
+
+.bg {
+  background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url("pack1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: calc(100vh - 70px);
+  max-width:100%;
+  // filter: grayscale(50%);
+  // filter:blur(1.8em);
+  background-attachment: fixed;
+}
+
+.white {
+  color:white;
+}
+
+.wel {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  /* background-color: #f5f5f5; */
+  /* border: 1px solid #e3e3e3; */
+  border-radius: 2px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
