--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,11 +3,11 @@
 }
 
 .bg {
-  background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url("pack1.png");
+  background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url("pack.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: calc(100vh - 70px);
-  max-width:100%;
+  // height: calc(100vh - 70px);
+  min-height:100vh;
   // filter: grayscale(50%);
   // filter:blur(1.8em);
   background-attachment: fixed;
