Order Date format fixed and order updated date in admin now

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,10 +14,10 @@
         <div class="message-name">
           <h3>Order# <%= o.id %></h3>
           <% unless o.created_at %>
-          <p><%= o.created_at.strftime("%m/%d/%Y") %></p>
+          <p><%= o.created_at.strftime("%d/%m/%Y") %></p>
           <p><%= o.created_at.strftime("%H:%M:%S") %></p>
           <% else o.updated_at? %>
-          <p><%= o.updated_at.strftime("%m/%d/%Y") %></p>
+          <p><%= o.updated_at.strftime("%d/%m/%Y") %></p>
           <p><%= o.updated_at.strftime("%H:%M:%S") %></p>
           <% end %>
         </div>
