Added Ordering Tips to customer dashboard

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,5 +20,16 @@
         </div>
       </div>
     </div>
+    <br>
+    <div class="row">
+      <div class="col-xs-12 text-center">
+        <h4><u>Ordering Tips</u></h4>
+        <p> * Place an order before 2 PM for disptach the following day</p>
+        <p> * Please allow upto 3 working days for delivery(excludes bank Holidays)</p>
+        <p> * Carriage is charged at £8 per box</p>
+        <p> * All prices are exclusive of VAT</p>
+        <br>
+      </div>
+    </div>
   </div>
 </div>
