--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,11 +3,13 @@
     <div class="col-xs-12 col-md-6" style="font-size:2.2em;color:#696969;">
       <b><%= current_user.forname %>'s Orders</b>
     </div>
+    <% if @orders.presence != nil %>
     <div class="col-xs-12 col-md-6 text-right">
       <%= link_to "New Order", new_order_path, class: "btn btn-success" %>
     </div>
+    <% end %>
   </div>
-
+  <% if @orders.any? %>
   <% @orders.each do |o| %>
     <%= link_to order_path(o) do %>
       <div class="message">
@@ -43,5 +45,16 @@
         </div>
       </div>
     <% end %>
+  <% end %>
+  <% else %>
+  <div class="col-xs-12">
+    <div class="row">
+      <div class="no-order">
+        <p>There are no current or past orders. Place a new order to get started.</p>
+        <p><%= link_to "Place First Order", new_order_path, class: "btn btn-success" %></p>
+      </div>
+
+    </div>
+  </div>
   <% end %>
 </div>
