User view of the app now has title meta tags

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,4 @@
+<%= provide(:title, @current_user.forname + ' ' + 'Orders') %>
 <div class="container">
   <div class="message">
     <div class="col-xs-12 col-md-6" style="font-size:2.2em;color:#696969;">
