--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TODO</title>
+    <title><%= yield(:title) %></title>
+    <%= favicon_link_tag "https://png.icons8.com/ios/55/156DB1/circled-C.png" %>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
@@ -15,6 +16,5 @@
     <%= yield %>
     <%#= javascript_pack_tag 'application' %>
     <%= javascript_include_tag 'application' %>
-
   </body>
 </html>
