--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,8 @@
 @import "bootstrap-select.min";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "chosen";
+// @import "select2";
 
 // Your CSS partials
 @import "layouts/index";
