Created custom jquery search for customers in admin

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -21,6 +21,15 @@
  .warning {background:orange;}
  .blue {background:#1a8fc6;}
 
+// #selecttwo {
+//   // width:200px;
+//   width: calc(80% - 22px);
+// }
+
+span {
+  color:grey
+}
+
 .f-label {
   padding-left: 10px;
   display: block;
