--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -25,6 +25,17 @@
 //   // width:200px;
 //   width: calc(80% - 22px);
 // }
+#order_user_id {
+  margin-top: 10px;
+}
+
+.margin-top {
+  margin-top: 10px;
+}
+
+select {
+  color:grey;
+}
 
 span {
   color:grey
