--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,8 +1,8 @@
-<%= provide(:title, @current_user.forname + ' ' + 'Orders') %>
+<%= provide(:title, @current_user.company.name.to_s + ' ' + 'Orders') %>
 <div class="container">
   <div class="message">
     <div class="col-xs-12 col-md-6" style="font-size:2.2em;color:#696969;">
-      <b><%= current_user.forname %>'s Orders</b>
+      <b><%= current_user.company.name.to_s %>'s Orders</b>
     </div>
     <% if @orders.presence != nil %>
     <div class="col-xs-12 col-md-6 text-right">
