--- a/app/views/order_mailer/order_submitted.html.erb
+++ b/app/views/order_mailer/order_submitted.html.erb
@@ -1,5 +1,5 @@
-<h1>Order#order_submitted</h1>
+<h4>Hi,</h4>
 
 <p>
-  <%= @greeting %>, find me in app/views/order_mailer/order_submitted.html.erb
+  Please check your admin Dashboard for a new order# <%= @order.id %> from <%= @order.user.forname %>.
 </p>
