Dashboard now has a new widget to show stock levels

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -20,6 +20,7 @@
  .done {background:#8DAA88;}
  .warning {background:orange;}
  .blue {background:#1a8fc6;}
+ .stock-level {background:#8DAA88;font-size:1.2em;}
 
 // #selecttwo {
 //   // width:200px;
