--- a/app/views/admin/dashboard/_date_range_search.html.erb
+++ b/app/views/admin/dashboard/_date_range_search.html.erb
@@ -1,4 +1,5 @@
 <%= form_tag(admin_dashboard_stock_search_path, method: :get, remote: true) do %>
+  <br><p style="color:#5E6469;">Calculate Total Stock upto a specific date...</p><br>
   <div style="display:flex;">
     <%= date_field_tag 'date_from', @date_from%>
     <%= submit_tag 'Search', class: 'stock-search-btn' %>
